Fix: harden transactional Patchwork reloads