@@ -11,6 +11,7 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Supplier;
+import com.alechilles.patchwork.generation.GeneratedPackManifest;
 
 /** Serializes authorized reload passes and commits each generated target independently. */
 public final class PatchReloadCoordinator {
@@ -20,10 +21,12 @@ public final class PatchReloadCoordinator {
     public enum TargetState { HOT_RELOADED, ADAPTER_RELOADED, RESTART_REQUIRED, REMOVED, STALE, ROLLBACK_FAILED, FAILED }
     /** Manifest outcome recorded before any target may be touched. */
     public enum ManifestState { NOT_ATTEMPTED, COMMITTED, UNCHANGED, COMMIT_UNCERTAIN }
+    /** Final exact inventory reconciliation state. */
+    public enum IntegrityState { NOT_ATTEMPTED, RECONCILED, FAILED, UNCERTAIN }
     /** Fully staged bytes for an explicitly requested generation pass. */
-    public record ReloadPlan(byte[] manifestBytes, List<TargetUpdate> updates) {
-        public ReloadPlan { manifestBytes = manifestBytes.clone(); updates = List.copyOf(updates); }
-        @Override public byte[] manifestBytes() { return manifestBytes.clone(); }
+    public record ReloadPlan(byte[] hytaleManifestBytes, List<TargetUpdate> updates) {
+        public ReloadPlan { hytaleManifestBytes = hytaleManifestBytes.clone(); updates = List.copyOf(updates); }
+        @Override public byte[] hytaleManifestBytes() { return hytaleManifestBytes.clone(); }
     }
     /** Replacement bytes for one target; a null payload represents intentional removal. */
     public record TargetUpdate(String target, byte[] bytes) {
@@ -36,9 +39,9 @@ public final class PatchReloadCoordinator {
         public static ReloadRequest authorized(Supplier<ReloadPlan> generator) { return new ReloadRequest(Trigger.PATCHWORK_RELOAD_COMMAND, "patchwork.admin", generator); }
     }
     /** One externally visible target result. */
-    public record TargetOutcome(String target, TargetState state, String adapterId, String diagnostic) { }
+    public record TargetOutcome(String target, TargetState state, String adapterId, String diagnostic, TargetJournalEntry rollbackEvidence, Path rollbackEvidencePath, boolean restartRequired) { }
     /** Serialized pass result. */
-    public record ReloadOutcome(boolean started, long epoch, ManifestState manifestState, List<TargetOutcome> targets, String diagnostic) {
+    public record ReloadOutcome(boolean started, long epoch, ManifestState manifestState, List<TargetOutcome> targets, IntegrityState integrityState, String diagnostic) {
         public ReloadOutcome { targets = List.copyOf(targets); }
     }
 
@@ -51,6 +54,10 @@ public final class PatchReloadCoordinator {
     private final TargetPatchTransaction.MoveStrategy manifestMoves;
     private final PatchTargetClassifier classifier = new PatchTargetClassifier();
     private long nextEpoch;
+    private volatile boolean accepting = true;
+    private volatile long ownershipEpoch;
+    private final Object lifecycleLock = new Object();
+    private volatile boolean inProgress;
 
     public PatchReloadCoordinator(Path generatedRoot, PatchReloadTracker tracker, HytalePatchTargetAdapter builtInAdapter, List<HytalePatchTargetAdapter> hostAdapters, Duration timeout) {
         this(generatedRoot, tracker, builtInAdapter, hostAdapters, timeout, TargetPatchTransaction.fileMoves(), TargetPatchTransaction.fileMoves());
@@ -63,19 +70,34 @@ public final class PatchReloadCoordinator {
 
     /** Runs one authorized pass at a time; file and observer events cannot call this method successfully. */
     public synchronized ReloadOutcome reload(ReloadRequest request) {
+        if (inProgress || !accepting) return new ReloadOutcome(false, nextEpoch, ManifestState.NOT_ATTEMPTED, List.of(), IntegrityState.NOT_ATTEMPTED, "Reload is fenced or already in progress.");
         if (request.trigger() != Trigger.PATCHWORK_RELOAD_COMMAND || !"patchwork.admin".equals(request.permission())) {
-            return new ReloadOutcome(false, nextEpoch, ManifestState.NOT_ATTEMPTED, List.of(), "Live reload requires authorized /patchwork reload.");
+            return new ReloadOutcome(false, nextEpoch, ManifestState.NOT_ATTEMPTED, List.of(), IntegrityState.NOT_ATTEMPTED, "Live reload requires authorized /patchwork reload.");
         }
-        long epoch = ++nextEpoch;
+        long epoch = ++nextEpoch; inProgress = true;
+        try {
         ReloadPlan plan;
         try { plan = Objects.requireNonNull(request.generator().get(), "Reload generation returned no plan."); }
-        catch (Exception failure) { return new ReloadOutcome(true, epoch, ManifestState.NOT_ATTEMPTED, List.of(), "Generation failed: " + failure.getMessage()); }
-        ManifestResult manifest = writeManifest(plan.manifestBytes());
-        if (manifest.state() != ManifestState.COMMITTED) return new ReloadOutcome(true, epoch, manifest.state(), List.of(), manifest.diagnostic());
+        catch (Exception failure) { return new ReloadOutcome(true, epoch, ManifestState.NOT_ATTEMPTED, List.of(), IntegrityState.NOT_ATTEMPTED, "Generation failed: " + failure.getMessage()); }
+        ManifestResult manifest = writeManifest("manifest.json", plan.hytaleManifestBytes());
+        if (manifest.state() != ManifestState.COMMITTED) return new ReloadOutcome(true, epoch, manifest.state(), List.of(), IntegrityState.NOT_ATTEMPTED, manifest.diagnostic());
         List<TargetOutcome> outcomes = new ArrayList<>();
         TargetPatchTransaction transaction = new TargetPatchTransaction(root, targetMoves);
-        for (TargetUpdate update : plan.updates()) outcomes.add(reloadTarget(epoch, transaction, update));
-        return new ReloadOutcome(true, epoch, ManifestState.COMMITTED, outcomes, "");
+        for (TargetUpdate update : plan.updates()) { if (!accepting) break; outcomes.add(reloadTarget(epoch, transaction, update)); }
+        IntegrityResult integrity = reconcileIntegrity();
+        return new ReloadOutcome(true, epoch, ManifestState.COMMITTED, outcomes, integrity.state(), (accepting ? "" : "Reload revoked. ") + integrity.diagnostic());
+        } finally { inProgress = false; }
+    }
+
+    /** Activates this coordinator for an ownership epoch. */
+    public void activate(long epoch) { synchronized (lifecycleLock) { if (epoch >= ownershipEpoch) { ownershipEpoch = epoch; accepting = true; } } }
+    /** Revokes only the current-or-newer ownership epoch and immediately cancels pending waits. */
+    public void revoke(long epoch) { synchronized (lifecycleLock) { if (epoch >= ownershipEpoch) { ownershipEpoch = epoch; accepting = false; tracker.cancelAll("Reload owner was revoked."); } } }
+    /** Waits only a bounded period for a fenced in-flight pass to leave its current operation. */
+    public boolean drain(Duration limit) {
+        long deadline = System.nanoTime() + limit.toNanos();
+        while (inProgress && System.nanoTime() < deadline) { Thread.onSpinWait(); }
+        return !inProgress;
     }
 
     private TargetOutcome reloadTarget(long epoch, TargetPatchTransaction transaction, TargetUpdate update) {
@@ -85,35 +107,38 @@ public final class PatchReloadCoordinator {
             PatchTargetClassifier.Family family = classifier.classify(update.target());
             HytalePatchTargetAdapter.ReloadTarget target = new HytalePatchTargetAdapter.ReloadTarget(epoch, update.target(), expectedHash, removal, family);
             HytalePatchTargetAdapter adapter = select(target);
-            try { transaction.apply(update.target(), update.bytes()); }
-            catch (Exception failure) { return rollback(epoch, transaction, journal, adapter, family, update.target(), failure.getMessage()); }
-            if (adapter == null) return new TargetOutcome(update.target(), TargetState.RESTART_REQUIRED, "", "No verified live reload route.");
             var observation = tracker.expect(epoch, update.target(), expectedHash, removal);
+            try { transaction.apply(update.target(), update.bytes()); }
+            catch (Exception failure) { tracker.cancel(epoch, update.target(), expectedHash); return rollback(epoch, transaction, journal, adapter, family, update.target(), failure.getMessage()); }
+            if (adapter == null) { tracker.cancel(epoch, update.target(), expectedHash); return outcome(update.target(), TargetState.RESTART_REQUIRED, "", "No verified live reload route.", null, true); }
             HytalePatchTargetAdapter.AdapterReply reply;
             try { reply = adapter.reload(target); }
             catch (Exception failure) { tracker.cancel(epoch, update.target(), expectedHash); return rollback(epoch, transaction, journal, adapter, family, update.target(), failure.getMessage()); }
             if (reply == null) { tracker.cancel(epoch, update.target(), expectedHash); return rollback(epoch, transaction, journal, adapter, family, update.target(), "Adapter returned no result."); }
-            if (reply.restartRequired()) { tracker.cancel(epoch, update.target(), expectedHash); return new TargetOutcome(update.target(), TargetState.RESTART_REQUIRED, adapter.adapterId(), reply.diagnostic()); }
+            if (reply.restartRequired()) { tracker.cancel(epoch, update.target(), expectedHash); return outcome(update.target(), TargetState.RESTART_REQUIRED, adapter.adapterId(), reply.diagnostic(), null, true); }
             if (!reply.accepted() || !await(observation)) {
                 tracker.cancel(epoch, update.target(), expectedHash);
                 return rollback(epoch, transaction, journal, adapter, family, update.target(), reply.diagnostic());
             }
             TargetState state = removal ? TargetState.REMOVED : adapter == builtInAdapter ? TargetState.HOT_RELOADED : TargetState.ADAPTER_RELOADED;
-            return new TargetOutcome(update.target(), state, adapter.adapterId(), "");
-        } catch (Exception failure) { return new TargetOutcome(update.target(), TargetState.FAILED, "", failure.getMessage()); }
+            return outcome(update.target(), state, adapter.adapterId(), "", null, false);
+        } catch (Exception failure) { return outcome(update.target(), TargetState.FAILED, "", failure.getMessage(), null, false); }
     }
 
     private TargetOutcome rollback(long epoch, TargetPatchTransaction transaction, TargetJournalEntry journal, HytalePatchTargetAdapter adapter, PatchTargetClassifier.Family family, String target, String diagnostic) {
+        boolean expectationRegistered = false;
         try {
-            transaction.rollback(journal);
-            if (adapter == null) return new TargetOutcome(target, TargetState.ROLLBACK_FAILED, "", diagnostic);
             boolean removal = journal.oldBytes() == null;
+            if (!accepting) { transaction.rollback(journal); return outcome(target, TargetState.ROLLBACK_FAILED, "", diagnostic + " Reload revoked before rollback confirmation.", journal, true); }
             var expected = tracker.expect(epoch, target, journal.oldHash(), removal);
+            expectationRegistered = true;
+            transaction.rollback(journal);
+            if (adapter == null) return outcome(target, TargetState.ROLLBACK_FAILED, "", diagnostic, journal, true);
             HytalePatchTargetAdapter.AdapterReply reply = adapter.reload(new HytalePatchTargetAdapter.ReloadTarget(epoch, target, journal.oldHash(), removal, family));
-            if (reply.accepted() && await(expected)) return new TargetOutcome(target, TargetState.STALE, adapter.adapterId(), diagnostic);
-            tracker.cancel(epoch, target, journal.oldHash());
+            if (reply != null && reply.accepted() && !reply.restartRequired() && await(expected)) return outcome(target, TargetState.STALE, adapter.adapterId(), diagnostic, null, false);
         } catch (Exception ignored) { }
-        return new TargetOutcome(target, TargetState.ROLLBACK_FAILED, adapter.adapterId(), diagnostic);
+        finally { if (expectationRegistered) tracker.cancel(epoch, target, journal.oldHash()); }
+        return outcome(target, TargetState.ROLLBACK_FAILED, adapter == null ? "" : adapter.adapterId(), diagnostic, journal, true);
     }
 
     private HytalePatchTargetAdapter select(HytalePatchTargetAdapter.ReloadTarget target) {
@@ -125,10 +150,24 @@ public final class PatchReloadCoordinator {
         try { return expected.get(timeout.toMillis(), TimeUnit.MILLISECONDS) != PatchReloadTracker.Outcome.FAILED; }
         catch (Exception timeoutOrFailure) { return false; }
     }
-    private ManifestResult writeManifest(byte[] bytes) {
-        Path manifest = root.resolve("patchwork-manifest.json"); Path temporary = null;
-        try { Files.createDirectories(root); temporary = Files.createTempFile(root, ".patchwork-manifest-", ".tmp"); Files.write(temporary, bytes); try { manifestMoves.atomicMove(temporary, manifest); }
+    private TargetOutcome outcome(String target, TargetState state, String adapterId, String diagnostic, TargetJournalEntry evidence, boolean restartRequired) {
+        Path evidencePath = evidence == null ? null : preserveEvidence(target, evidence);
+        return new TargetOutcome(target, state, adapterId, diagnostic + (evidence != null && evidencePath == null ? " Evidence persistence failed." : ""), evidence, evidencePath, restartRequired);
+    }
+    private Path preserveEvidence(String target, TargetJournalEntry evidence) {
+        try {
+            Path diagnostics = root.getParent().resolve("Diagnostics").normalize(); TargetPatchTransaction.verifySafePath(root.getParent()); Files.createDirectories(diagnostics); TargetPatchTransaction.verifySafePath(diagnostics); var diagnosticsAncestry = TargetPatchTransaction.captureAncestry(diagnostics);
+            String safe = target.replaceAll("[^A-Za-z0-9._-]", "_"); String name = "reload-" + nextEpoch + "-" + safe + "-" + evidence.oldHash().substring(0, Math.min(12, evidence.oldHash().length())) + "-" + java.util.UUID.randomUUID(); Path directory = Files.createDirectory(diagnostics.resolve(name)); TargetPatchTransaction.verifySafePath(directory);
+            TargetPatchTransaction.requireSameAncestry(diagnostics, diagnosticsAncestry); Files.writeString(directory.resolve("metadata.txt"), "Epoch=" + nextEpoch + "\nTarget=" + target + "\nHash=" + evidence.oldHash() + "\n");
+            if (evidence.oldBytes() != null) { TargetPatchTransaction.requireSameAncestry(diagnostics, diagnosticsAncestry); Files.write(directory.resolve("old-bytes.bin"), evidence.oldBytes()); }
+            return directory;
+        } catch (Exception ignored) { return null; }
+    }
+    private ManifestResult writeManifest(String fileName, byte[] bytes) {
+        Path manifest = root.resolve(fileName); Path temporary = null;
+        try { TargetPatchTransaction.verifySafePath(root); TargetPatchTransaction.verifySafePath(manifest); Files.createDirectories(root); TargetPatchTransaction.verifySafePath(root); temporary = Files.createTempFile(root, ".patchwork-manifest-", ".tmp"); Files.write(temporary, bytes); var ancestry = TargetPatchTransaction.captureAncestry(root); manifestMoves.beforeMutation(manifest); TargetPatchTransaction.requireSameAncestry(root, ancestry); TargetPatchTransaction.verifySafePath(manifest); try { manifestMoves.atomicMove(temporary, manifest); }
             catch (AtomicMoveNotSupportedException unsupported) { manifestMoves.nonAtomicMove(temporary, manifest); }
+            TargetPatchTransaction.requireSameAncestry(root, ancestry); TargetPatchTransaction.verifySafePath(manifest);
             return new ManifestResult(ManifestState.COMMITTED, "");
         } catch (Exception failure) {
             try { if (Files.exists(manifest) && java.util.Arrays.equals(bytes, Files.readAllBytes(manifest))) return new ManifestResult(ManifestState.COMMIT_UNCERTAIN, "Manifest move reported failure after desired bytes became visible."); }
@@ -136,5 +175,18 @@ public final class PatchReloadCoordinator {
             return new ManifestResult(ManifestState.UNCHANGED, "Manifest commit failed: " + failure.getMessage());
         } finally { if (temporary != null) try { Files.deleteIfExists(temporary); } catch (IOException ignored) { } }
     }
+    private IntegrityResult reconcileIntegrity() {
+        try (var files = Files.walk(root)) {
+            List<GeneratedPackManifest.Entry> entries = files.filter(path -> {
+                try { TargetPatchTransaction.verifySafePath(path); return Files.isRegularFile(path, java.nio.file.LinkOption.NOFOLLOW_LINKS); } catch (IOException unsafe) { throw new IllegalStateException(unsafe); }
+            }).filter(path -> !path.getFileName().toString().equals("manifest.json") && !path.getFileName().toString().equals(GeneratedPackManifest.FILE_NAME)).map(path -> {
+                try { return new GeneratedPackManifest.Entry(root.relativize(path).toString().replace('\\', '/'), Files.readAllBytes(path)); }
+                catch (IOException failure) { throw new IllegalStateException(failure); }
+            }).toList();
+            ManifestResult result = writeManifest(GeneratedPackManifest.FILE_NAME, new GeneratedPackManifest(entries).bytes());
+            return result.state() == ManifestState.COMMITTED ? new IntegrityResult(IntegrityState.RECONCILED, "") : new IntegrityResult(IntegrityState.UNCERTAIN, result.diagnostic());
+        } catch (Exception failure) { return new IntegrityResult(IntegrityState.FAILED, "Integrity reconciliation failed: " + failure.getMessage()); }
+    }
     private record ManifestResult(ManifestState state, String diagnostic) { }
+    private record IntegrityResult(IntegrityState state, String diagnostic) { }
 }
